welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:24: error: not found: value COLOR
	faireC1(COLOR.RED)
                ^