welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
def faireC1(c:Color){
	setCouleurBrosse(c)
	avance()
	baisseBrosse()
	leveBrosse()
	gauche()
	avance()
	gauche()
	avance()
	baisseBrosse()
	leveBrosse()
	gauche()
	avance()
	gauche()
	avance()
	avance()
	avance()
	avance()
	
}

override def run() {
	faireC1(COLOR.RED)
}
	